--- a/homepage.html
+++ b/homepage.html
@@ -13,7 +13,7 @@
     <h1>RIZAL's GROCERY</h1>
     <nav>
         <div class="menu-items">
-          <button class="menu-item" onclick="location.href='HOMEPAGE.html'">HOMEPAGE</button>
+          <button class="menu-item" onclick="location.href='homepage.html'">HOMEPAGE</button>
           <button class="menu-item" onclick="location.href='TOILETRIES.html'">TOILETRIES</button>
           <button class="menu-item" onclick="location.href='BREAD.html'">BREAD</button>
           <button class="menu-item" onclick="location.href='DRINK.html'">DRINK</button>
