--- a/TOILETRIES.html
+++ b/TOILETRIES.html
@@ -13,7 +13,7 @@
     <h1>RIZAL's GROCERY</h1>
     <nav>
         <div class="menu-items">
-          <button class="menu-item" onclick="location.href='HOMEPAGE.html'">Homepage</button>
+          <button class="menu-item" onclick="location.href='homepage.html'">Homepage</button>
           <button class="menu-item" onclick="location.href='TOILETRIES.html'">Toiletries</button>
           <button class="menu-item" onclick="location.href='BREAD.html'">Bread</button>
           <button class="menu-item" onclick="location.href='DRINK.html'">Drink</button>
