--- a/TOILETRIES.html
+++ b/TOILETRIES.html
@@ -117,7 +117,7 @@
   </div>
   <br>
   <script>
-  var prices = [2,2,2,2,2,2,2,2,2,2]; // Array of drink prices
+  var prices = [8.00, 5.00, 12.80, 2.00, 28.70, 2.00, 12.00, 27.00, 5.00, 5.00]; // Array of drink prices
   var quantities = new Array(prices.length).fill(0); // Array to store the quantities
 
   function updateTotal(index) {
